--- a/404.html
+++ b/404.html
@@ -64,7 +64,7 @@
       <span class="title">DataSonnet</span>
       <ul class="versions">
         <li class="version is-latest">
-          <a href="/datasonnet-mapper/datasonnet/0.4.1-MS3-SNAPSHOT/index.html">0.4.1-MS3-SNAPSHOT</a>
+          <a href="/datasonnet-mapper/datasonnet/latest/index.html">latest</a>
         </li>
       </ul>
     </li>
@@ -76,7 +76,7 @@
 <main class="article">
 <div class="toolbar" role="navigation">
 <button class="nav-toggle"></button>
-  <a href="/datasonnet-mapper/datasonnet/0.4.1-MS3-SNAPSHOT/index.html" class="home-link"></a>
+  <a href="/datasonnet-mapper/datasonnet/latest/index.html" class="home-link"></a>
 <nav class="breadcrumbs" aria-label="breadcrumbs">
 </nav>
 </div>
