--- a/datasonnet/latest/libraries.html
+++ b/datasonnet/latest/libraries.html
@@ -810,7 +810,7 @@
 <div class="sect2">
 <h3 id="_isdecimalnum_numtocheck"><a class="anchor" href="#_isdecimalnum_numtocheck"></a><code>isDecimal(num numToCheck)</code></h3>
 <div class="paragraph">
-<p>Checks that the input number <code>numToCheck</code> is a decimal number. Trailing zeros do not count.</p>
+<p>Checks that the input number <code>numToCheck</code> is a decimal number. Trailing zeros are ignored.</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
@@ -917,9 +917,7 @@
 <div class="sect2">
 <h3 id="_isintegernum_numtocheck"><a class="anchor" href="#_isintegernum_numtocheck"></a><code>isInteger(num numToCheck)</code></h3>
 <div class="paragraph">
-<p>Checks that the input number <code>numToCheck</code> is an integer.
-The number passed drops trailing zeros, so <code>2.0</code> would be <code>true</code>
-but <code>2.1</code> would be <code>false</code>.</p>
+<p>Checks that the input number <code>numToCheck</code> is an integer. Trailing zeros are ignored.</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
@@ -1464,15 +1462,16 @@ but <code>2.1</code> would be <code>false</code>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_orderbyarrayobject_arr_function_func"><a class="anchor" href="#_orderbyarrayobject_arr_function_func"></a><code>orderBy(array|object arr, function func)</code></h3>
+<h3 id="_orderbyarrayobject_items_function_func"><a class="anchor" href="#_orderbyarrayobject_items_function_func"></a><code>orderBy(array|object items, function func)</code></h3>
 <div class="paragraph">
-<p>Reorders the array <code>arr</code> by the result of <code>func</code>.</p>
+<p>Reorders the array <code>items</code> by the result of <code>func</code>.</p>
 </div>
 <div class="paragraph">
-<p>If <code>arr</code> is an array: the function <code>func</code> is expected to take the value as the first parameter (required).</p>
+<p>If <code>items</code> is an array: the function <code>func</code> is expected to take the value as the first parameter (required).</p>
 </div>
 <div class="paragraph">
-<p>If <code>arr</code> is an object: the function <code>func</code> is expected to take the value as the first parameter (required) and the key as the second parameter (optional).</p>
+<p>If <code>items</code> is an object: the function <code>func</code> is expected to take the value as the first parameter (required) and the key as the second parameter (optional).
+&gt;&gt;&gt;&gt;&gt;&gt;&gt; Add more core functions</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
@@ -1511,9 +1510,195 @@ but <code>2.1</code> would be <code>false</code>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_removeobject_obj_string_propname"><a class="anchor" href="#_removeobject_obj_string_propname"></a><code>remove(object obj, string propName)</code></h3>
+<h3 id="_parsedoublestring_str"><a class="anchor" href="#_parsedoublestring_str"></a><code>parseDouble(string str)</code></h3>
 <div class="paragraph">
-<p>Removes property <code>propName</code> from <code>obj</code> and returns the remaining object.</p>
+<p>Parses a string <code>str</code> containing a number and returns its decimal value. Trailing zeros are ignored.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">Payload</div>
+<div class="content">
+<pre>{
+    "version":"1.5"
+}</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.parseDouble(payload.version)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>1.5</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_parsehexstring_str"><a class="anchor" href="#_parsehexstring_str"></a><code>parseHex(string str)</code></h3>
+<div class="paragraph">
+<p>Parses a hex value given as a string <code>str</code> and returns its decimal value.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">Payload</div>
+<div class="content">
+<pre>{
+    "hex":"F"
+}</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.parseHex(payload.hex)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>15</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_parseintstring_str"><a class="anchor" href="#_parseintstring_str"></a><code>parseInt(string str)</code></h3>
+<div class="paragraph">
+<p>Parses an int value given as a string <code>str</code> and returns its integer value.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">Payload</div>
+<div class="content">
+<pre>{
+    "number":"50"
+}</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.parseInt(payload.number)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>50</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_parseoctalstring_str"><a class="anchor" href="#_parseoctalstring_str"></a><code>parseOctal(string str)</code></h3>
+<div class="paragraph">
+<p>Parses an octal value given as a string <code>str</code> and returns its integer value.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">Payload</div>
+<div class="content">
+<pre>{
+    "octal":"107136"
+}</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.parseOctal(payload.octal)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>36446</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_prependarray_arr_any_val"><a class="anchor" href="#_prependarray_arr_any_val"></a><code>prepend(array arr, any val)</code></h3>
+<div class="paragraph">
+<p>Given <code>arr</code> and <code>val</code>, inserts <code>val</code> at the beginning of <code>arr</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">Payload</div>
+<div class="content">
+<pre>[
+    2,
+    3,
+    4
+]</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.prepend(payload, 1)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>[
+  1,
+  2,
+  3,
+  4
+]</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_rangenumber_start_number_end"><a class="anchor" href="#_rangenumber_start_number_end"></a><code>range(number start, number end)</code></h3>
+<div class="paragraph">
+<p>Returns an array with the numbers from the <code>start</code> to the <code>end</code> of the range, inclusive.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">Payload</div>
+<div class="content">
+<pre>{
+    "start": 0,
+    "end": 3
+}</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.range(payload.start, payload.end)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>[
+  0,
+  1,
+  2,
+  3
+]</pre>
+</div>
+</div>
+<div class="paragraph">
+<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; Add more core functions
+<mark>#</mark> <code>remove(object obj, string propName)</code>
+Removes property <code>propName</code> from <code>obj</code> and returns the remaining object.</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
@@ -1590,7 +1775,7 @@ but <code>2.1</code> would be <code>false</code>.</p>
 </div>
 </div>
 <div class="sect2">
-<h3 id="_parsedoublestring_str"><a class="anchor" href="#_parsedoublestring_str"></a><code>parseDouble(string str)</code></h3>
+<h3 id="_parsedoublestring_str_2"><a class="anchor" href="#_parsedoublestring_str_2"></a><code>parseDouble(string str)</code></h3>
 <div class="paragraph">
 <p>Parses a string <code>str</code> which contains a double number and returns its numeric representation</p>
 </div>
