[CI] Publish Documentation for 2c18a644b3de279cc5d62f1d26cb4cd9e71ef811

--- a/datasonnet/latest/libraries.html
+++ b/datasonnet/latest/libraries.html
@@ -1695,10 +1695,11 @@
 ]</pre>
 </div>
 </div>
+</div>
+<div class="sect2">
+<h3 id="_removeobject_obj_string_propname"><a class="anchor" href="#_removeobject_obj_string_propname"></a><code>remove(object obj, string propName)</code></h3>
 <div class="paragraph">
-<p>&gt;&gt;&gt;&gt;&gt;&gt;&gt; Add more core functions
-<mark>#</mark> <code>remove(object obj, string propName)</code>
-Removes property <code>propName</code> from <code>obj</code> and returns the remaining object.</p>
+<p>Removes property <code>propName</code> from <code>obj</code> and returns the remaining object.</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
