[CI] Publish Documentation for 3d82f2ea8466c095448dfb78609534a4be5800a1

--- a/datasonnet/latest/libraries.html
+++ b/datasonnet/latest/libraries.html
@@ -2760,6 +2760,433 @@ It uses the <a href="https://github.com/json-path/JsonPath">Jayway JsonPath impl
 <h2 id="_math"><a class="anchor" href="#_math"></a>math</h2>
 <div class="sectionbody">
 <div class="sect2">
+<h3 id="_absnumber_num"><a class="anchor" href="#_absnumber_num"></a><code>abs(number num)</code></h3>
+<div class="paragraph">
+<p>Returns the absolute value of <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.abs(-1)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>1</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_acosnumber_num"><a class="anchor" href="#_acosnumber_num"></a><code>acos(number num)</code></h3>
+<div class="paragraph">
+<p>Performs math acos operation on <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.acos(1)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>0</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_asinnumber_num"><a class="anchor" href="#_asinnumber_num"></a><code>asin(number num)</code></h3>
+<div class="paragraph">
+<p>Performs math asin operation on <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.asin(1)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>1.5707963267948966</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_atannumber_num"><a class="anchor" href="#_atannumber_num"></a><code>atan(number num)</code></h3>
+<div class="paragraph">
+<p>Performs math atan operation on <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.atan(1)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>0.7853981633974483</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_avgarray_arr"><a class="anchor" href="#_avgarray_arr"></a><code>avg(array arr)</code></h3>
+<div class="paragraph">
+<p>Returns the average value of <code>arr</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.avg([1,2,3])</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>2</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_ceilnumber_num"><a class="anchor" href="#_ceilnumber_num"></a><code>ceil(number num)</code></h3>
+<div class="paragraph">
+<p>Rounds <code>num</code> up.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.ceil(1.01)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>2</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_clampnumber_value_number_minval_number_maxval"><a class="anchor" href="#_clampnumber_value_number_minval_number_maxval"></a><code>clamp(number value, number minVal, number maxVal)</code></h3>
+<div class="paragraph">
+<p>Limits <code>value</code> to the range of <code>minVal</code> and <code>maxVal</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.clamp(100, 0, 10)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>10</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_cosnumber_num"><a class="anchor" href="#_cosnumber_num"></a><code>cos(number num)</code></h3>
+<div class="paragraph">
+<p>Performs math cos operation on <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.cos(0)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>1</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_expnumber_num"><a class="anchor" href="#_expnumber_num"></a><code>exp(number num)</code></h3>
+<div class="paragraph">
+<p>Returns the result of e to the power of <code>num</code>, in other words e<sup><code>num</code></sup>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.exp(2)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>7.38905609893065</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_exponentnumber_num"><a class="anchor" href="#_exponentnumber_num"></a><code>exponent(number num)</code></h3>
+<div class="paragraph">
+<p>Returns the non-decimal portion of a logarithmic operation.</p>
+</div>
+<div class="paragraph">
+<p>exponent = (log(<code>num</code>)/log(2)) + 1</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.exponent(2)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>2</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_floornumber_num"><a class="anchor" href="#_floornumber_num"></a><code>floor(number num)</code></h3>
+<div class="paragraph">
+<p>Rounds <code>num</code> down.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.floor(4.99)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>4</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_lognumber_num"><a class="anchor" href="#_lognumber_num"></a><code>log(number num)</code></h3>
+<div class="paragraph">
+<p>Performs math log operation. on <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.log(2)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>0.6931471805599453</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_mantissanumber_num"><a class="anchor" href="#_mantissanumber_num"></a><code>mantissa(number num)</code></h3>
+<div class="paragraph">
+<p>Returns the decimal portion of a logarithmic operation.</p>
+</div>
+<div class="paragraph">
+<p>exponent = (log(<code>num</code>)/log(2)) + 1
+mantissa = <code>num</code> * pow(2, -exponent)</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.mantissa(2)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>0.5</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_modnumber_num1_number_num2"><a class="anchor" href="#_modnumber_num1_number_num2"></a><code>mod(number num1, number num2)</code></h3>
+<div class="paragraph">
+<p>Performs modulo operation, returns how many times <code>num1</code> can go into <code>num2</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.mod(2,4)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>2</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_pownumber_num1_number_num2"><a class="anchor" href="#_pownumber_num1_number_num2"></a><code>pow(number num1, number num2)</code></h3>
+<div class="paragraph">
+<p>Returns the value of <code>num1</code> to the power of <code>num2</code>, in other words <code>num1</code><sup><code>num2</code></sup>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.pow(2,2)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>4</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_random"><a class="anchor" href="#_random"></a><code>random</code></h3>
+<div class="paragraph">
+<p>Returns a random float value between 0 and 1.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.random</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>0.5963038027787421</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_randomintnumber_num"><a class="anchor" href="#_randomintnumber_num"></a><code>randomInt(number num)</code></h3>
+<div class="paragraph">
+<p>Returns a random integer between 0 and the provided number inclusive.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.randomInt(500)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>485</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_roundnumber_num"><a class="anchor" href="#_roundnumber_num"></a><code>round(number num)</code></h3>
+<div class="paragraph">
+<p>Rounds <code>num</code> to the nearest whole number.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.round(2.5)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>3</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_sinnumber_num"><a class="anchor" href="#_sinnumber_num"></a><code>sin(number num)</code></h3>
+<div class="paragraph">
+<p>Performs math sin operation on <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.sin(1)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>0.8414709848078965</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_sqrtnumber_num"><a class="anchor" href="#_sqrtnumber_num"></a><code>sqrt(number num)</code></h3>
+<div class="paragraph">
+<p>Performs math square root operation on <code>num</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.math.sqrt(4)</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>2</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
 <h3 id="_sumarray_arr"><a class="anchor" href="#_sumarray_arr"></a><code>sum(array arr)</code></h3>
 <div class="paragraph">
 <p>Returns sum of all elements in <code>arr</code>.</p>
@@ -2787,31 +3214,23 @@ It uses the <a href="https://github.com/json-path/JsonPath">Jayway JsonPath impl
 </div>
 </div>
 <div class="sect2">
-<h3 id="_rounddouble_num_int_precision"><a class="anchor" href="#_rounddouble_num_int_precision"></a><code>round(double num, int precision)</code></h3>
+<h3 id="_tannumber_num"><a class="anchor" href="#_tannumber_num"></a><code>tan(number num)</code></h3>
 <div class="paragraph">
-<p>Rounds a double <code>num</code> to the number of digits after the decimal point.</p>
+<p>Performs math tan operation on <code>num</code>.</p>
 </div>
 <div class="paragraph">
 <p><strong>Example</strong></p>
 </div>
 <div class="listingblock">
-<div class="title">Payload</div>
-<div class="content">
-<pre>{
-    "num": 123.562567558
-}</pre>
-</div>
-</div>
-<div class="listingblock">
 <div class="title">DataSonnet map:</div>
 <div class="content">
-<pre>ds.math.round(payload.num, 6)</pre>
+<pre>ds.math.tan(1)</pre>
 </div>
 </div>
 <div class="listingblock">
 <div class="title">Result</div>
 <div class="content">
-<pre>123.562568</pre>
+<pre>1.5574077246549023</pre>
 </div>
 </div>
 </div>
