--- a/datasonnet/latest/libraries.html
+++ b/datasonnet/latest/libraries.html
@@ -152,6 +152,7 @@
 <ul class="sectlevel1">
 <li><a href="#_core">core</a></li>
 <li><a href="#_arrays">arrays</a></li>
+<li><a href="#_binaries">binaries</a></li>
 <li><a href="#_crypto">crypto</a></li>
 <li><a href="#_datetime">datetime</a></li>
 <li><a href="#_localdatetime">localdatetime</a></li>
@@ -3436,6 +3437,137 @@ All properties of the object can be removed using a <code>value</code> in the ar
   1,
   2
 ]</pre>
+</div>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_binaries"><a class="anchor" href="#_binaries"></a>binaries</h2>
+<div class="sectionbody">
+<div class="sect2">
+<h3 id="_frombase64string_value"><a class="anchor" href="#_frombase64string_value"></a><code>fromBase64(string value)</code></h3>
+<div class="paragraph">
+<p>Converts <code>value</code> from base64.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.binaries.fromBase64("SGVsbG8gV29ybGQ=")</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>"Hello World"</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_fromhexstring_value"><a class="anchor" href="#_fromhexstring_value"></a><code>fromHex(string value)</code></h3>
+<div class="paragraph">
+<p>Converts <code>value</code> from hexadecimal.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.binaries.fromHex("48656C6C6F20576F726C64")</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>"Hello World"</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_readlineswithstring_value_string_encoding"><a class="anchor" href="#_readlineswithstring_value_string_encoding"></a><code>readLinesWith(string value, string encoding)</code></h3>
+<div class="paragraph">
+<p>Reads <code>value</code> with the specified encoding <code>encoding</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.binaries.readLinesWith("Hello World","UTF-8")</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>["Hello World"]</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_tobase64any_value"><a class="anchor" href="#_tobase64any_value"></a><code>toBase64(any value)</code></h3>
+<div class="paragraph">
+<p>Converts <code>value</code> to base 64.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.binaries.toBase64("Hello World")</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>"SGVsbG8gV29ybGQ="</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_tohexany_value"><a class="anchor" href="#_tohexany_value"></a><code>toHex(any value)</code></h3>
+<div class="paragraph">
+<p>Converts <code>value</code> to hexadecimal.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.binaries.toHex("Hello World")</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>"48656C6C6F20576F726C64"</pre>
+</div>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_writelineswithstring_value_string_encoding"><a class="anchor" href="#_writelineswithstring_value_string_encoding"></a><code>writeLinesWith(string value, string encoding)</code></h3>
+<div class="paragraph">
+<p>Writes <code>value</code> with the specified encoding <code>encoding</code>.</p>
+</div>
+<div class="paragraph">
+<p><strong>Example</strong></p>
+</div>
+<div class="listingblock">
+<div class="title">DataSonnet map:</div>
+<div class="content">
+<pre>ds.binaries.writeLinesWith(["Hello World"],"UTF-8")</pre>
+</div>
+</div>
+<div class="listingblock">
+<div class="title">Result</div>
+<div class="content">
+<pre>"Hello World\n"</pre>
 </div>
 </div>
 </div>
